-Added GET method in baseApi class.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,14 +1,14 @@
 <!-- Our Main HTML Project File -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Students Affairs System</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style.css" />
     <script src="../src/app.js" type="module"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div id="app"></div>
-</body>
+  </body>
 </html>
