--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,10 +5,157 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Students Affairs System</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="../css/style.css" />
-    <script src="../src/app.js" type="module"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <body>
+      <!-- Top navbar -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Students Affairs System</a>
+        </div>
+      </nav>
+
+      <div class="container-fluid py-4">
+        <!-- Tabs for sections -->
+        <ul class="nav nav-tabs mb-3" id="main-tabs">
+          <li class="nav-item">
+            <button
+              class="nav-link active"
+              data-entity="student"
+              id="tab-students"
+            >
+              Students
+            </button>
+          </li>
+          <li class="nav-item">
+            <button class="nav-link" data-entity="course" id="tab-courses">
+              Courses
+            </button>
+          </li>
+          <li class="nav-item">
+            <button
+              class="nav-link"
+              data-entity="instructor"
+              id="tab-instructors"
+            >
+              Instructors
+            </button>
+          </li>
+          <li class="nav-item">
+            <button class="nav-link" data-entity="employee" id="tab-employees">
+              Employees
+            </button>
+          </li>
+        </ul>
+
+        <!-- Toolbar: title + add button -->
+        <div class="d-flex justify-content-between align-items-center mb-3">
+          <h2 class="h4 mb-0" id="page-title">Students</h2>
+          <button id="btn-add" class="btn btn-primary">
+            <i class="bi bi-plus-lg"></i> Add
+          </button>
+        </div>
+
+        <!-- Filters row -->
+        <div class="row mb-3 g-2">
+          <div class="col-md-6">
+            <div class="input-group">
+              <span class="input-group-text"><i class="bi bi-search"></i></span>
+              <input
+                id="search-input"
+                type="text"
+                class="form-control"
+                placeholder="Search..."
+              />
+            </div>
+          </div>
+          <div class="col-md-3 ms-auto text-md-end">
+            <select id="page-size" class="form-select">
+              <option value="5">5 per page</option>
+              <option value="10" selected>10 per page</option>
+              <option value="20">20 per page</option>
+            </select>
+          </div>
+        </div>
+
+        <!-- Table card -->
+        <div class="card">
+          <div class="card-body p-0">
+            <div class="table-responsive">
+              <table class="table table-hover mb-0 align-middle">
+                <thead class="table-light" id="table-head">
+                  <!-- DataTable.js will render headers -->
+                </thead>
+                <tbody id="table-body">
+                  <!-- DataTable.js will render rows -->
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+
+        <!-- Pagination row -->
+        <div class="d-flex justify-content-between align-items-center mt-3">
+          <small id="pagination-info" class="text-muted"></small>
+          <nav>
+            <ul id="pagination" class="pagination mb-0"></ul>
+          </nav>
+        </div>
+      </div>
+
+      <!-- Modal for Add/Edit -->
+      <div
+        class="modal fade"
+        id="entity-modal"
+        tabindex="-1"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <form
+            id="entity-form"
+            class="modal-content needs-validation"
+            novalidate
+          >
+            <div class="modal-header">
+              <h5 class="modal-title" id="entity-modal-title">Add</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+              ></button>
+            </div>
+
+            <div class="modal-body" id="entity-form-body">
+              <!-- Form.js will render fields here -->
+            </div>
+
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-outline-secondary"
+                data-bs-dismiss="modal"
+              >
+                Cancel
+              </button>
+              <button type="submit" class="btn btn-primary">Save</button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+      <script type="module" src="../src/app.js"></script>
+    </body>
   </body>
 </html>
