Refactor HTML structure for navbar and toolbar; enhance DataTable card padding; update student service to handle course ID types

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,16 +20,16 @@
   </head>
   <body>
     <!-- Navbar and Tabs Container -->
-    <div id="navbar-container"></div>
+    <div  id="navbar-container"></div>
 
     <!-- Toolbar Container (Title + Add Button) -->
-    <div id="toolbar-container"></div>
+    <div  id="toolbar-container"></div>
 
     <!-- DataTable Container (Filters & Table) -->
     <div id="datatable-container"></div>
 
     <!-- Pagination Container -->
-    <div id="pagination-container"></div>
+    <div class="container" id="pagination-container"></div>
 
     <!-- Modal Container (Add/Edit Form) -->
     <div id="modal-container"></div>
