--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Title -->
     <title>Students Affairs System</title>
+    <!-- ADD META DESCRIPTION FOR SEO -->
+    <meta
+      name="description"
+      content="Students Affairs System: Manage students, courses, instructors, and employees with CRUD operations, search, pagination, and responsive design for educational institutions."
+    />
     <!-- Styles -->
     <link rel="stylesheet" href="/css/style.css" />
   </head>
