feat: Add logo to navbar and update button style in form component

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
       name="description"
       content="Students Affairs System: Manage students, courses, instructors, and employees with CRUD operations, search, pagination, and responsive design for educational institutions."
     />
+    <link rel="icon" href="/public/logo.svg" />
     <!-- Styles -->
     <link rel="stylesheet" href="/css/style.css" />
   </head>
